--- a/src/app/Components/books/books.component.css
+++ b/src/app/Components/books/books.component.css
@@ -1,36 +1,25 @@
-.content {
-  padding: 16px;
-}
 
 button {
   background-color: rgb(201, 201, 213);
-
-
   margin: 5px;
 }
 
-.content>mat-card {
-  width: 200px;
-}
+
 .container-fluid{
   background-color: #232946;
 }
 .card {
-  margin-left: 20px;
-}
-
-.card {
-  border-radius: 2px;
+  margin: auto;
   background: #fff;
   box-shadow: 0 6px 10px rgba(0, 0, 0, .08), 0 0 6px rgba(0, 0, 0, .05);
   transition: .2s transform cubic-bezier(.155, 1.105, .295, 1.12), .3s box-shadow, .2s -webkit-transform cubic-bezier(.155, 1.105, .295, 1.12);
-  padding: 14px 80px 18px 36px;
+  padding: 18px 36px 18px 36px;
   cursor: pointer;
 }
 
 .card:hover {
   transform: scale(1.05);
-  box-shadow: 0 5px 5px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
+  box-shadow: 0 10px 20px rgba(0, 0, 0, .12), 0 4px 8px rgba(0, 0, 0, .06);
 }
 
 .mat-card-title {
