--- a/src/app/Components/books/books.component.html
+++ b/src/app/Components/books/books.component.html
@@ -5,40 +5,31 @@
   </div>
   <div class="row card-group mb-5">
     <div class="col-md-3" *ngFor="let b of books">
-      <div class="card mt-5 text-center card h-80" style="width: 90%; height: 450px;">
-
-        <div class="card-body ">
-          <mat-card-header>
-            <mat-card-title>{{b.title}}</mat-card-title>
-          </mat-card-header>
-          <div class="mid text-center">
-            <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="220px" alt="Card image cap">
-            <b>
-              <h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5>
-            </b>
-          </div>
-
-
-          <div class="stats mt-2">
-
-            <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{b.category}}</span></div>
-            <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{b.price |currency:
-                'INR'}}</span></div>
-          </div>
-          <!-- <div class="btns text-center">
-            <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Buy</button>
-            <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal"
-              data-bs-target="#exampleModal">Details</button>
-          </div> -->
-          <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-            <button type="button" (click)="addToCart(b)" class="btn  btn-block">Add to Cart</button>
+      <div class="card mt-2  mb-3 text-center card h-80" style="width: 90%; height: 500px;">
+              
+        <div class="card-body text-center">
+      <mat-card-header>
+        <mat-card-title>{{b.title}}</mat-card-title>
+      </mat-card-header>
+      <div class="mid">
+        <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="250px"  alt="Card image cap">
+           <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5></b> 
+      </div>
+      
+        
+           <div class="stats mt-2">
             
-          </div>
-
-
+            <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{b.category}}</span></div>
+            <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{b.price |currency: 'INR'}}</span></div>
+        </div>
+        <div class="btns text-center">
+          <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Add to Cart</button>
+         
+        </div>
+          
+          
         </div>
       </div>
-
 
     </div>
   </div>
