--- a/src/app/Components/home/home.component.html
+++ b/src/app/Components/home/home.component.html
@@ -18,33 +18,31 @@
 
    <div class="row mt-3 card-group">
     <div class="col-md-3" *ngFor="let x of bb" >
-          <div class="card mt-1  mb-3 text-center card h-80" style="width: 100%; height: 450px;">
-            
-            <div class="card-body text-center ">
-          <mat-card-header>
-            <mat-card-title>{{x.title}}</mat-card-title>
-          </mat-card-header>
-          <div class="text-center">
-            <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{x.logo}}" width="180px" height="220px"  alt="Card image cap">
-               <b><h5 class="card-subtitle mb-2 text-muted"> By {{x.authorName}}</h5></b> 
-               
+      <div class="card mt-2  mb-3 text-center card h-80" style="width: 90%; height: 500px;">
               
-          </div>
+        <div class="card-body text-center">
+      <mat-card-header>
+        <mat-card-title>{{x.title}}</mat-card-title>
+      </mat-card-header>
+      <div class="mid">
+        <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{x.logo}}" width="180px" height="250px"  alt="Card image cap">
+           <b><h5 class="card-subtitle mb-2 text-muted"> By {{x.authorName}}</h5></b> 
+      </div>
+      
+        
+           <div class="stats mt-2">
+            
+            <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{x.category}}</span></div>
+            <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{x.price |currency: 'INR'}}</span></div>
+        </div>
+        <div class="btns text-center">
+          <button type="button" (click)="addToCart(x)" class="btn btn-block mb-2">Add to Cart</button>
+         
+        </div>
           
-            
-               <div class="stats mt-2">
-                
-                <div class="d-flex justify-content-between p-price"><span>Category</span><span>{{x.category}}</span></div>
-                <div class="d-flex justify-content-between p-price"><span>Price</span><span>{{x.price |currency: 'INR'}}</span></div>
-               
-            </div>
-            <div class="btns text-center">
-              <button type="button" (click)="addToCart(x)" class="btn btn-block mb-2">Add to Cart</button>
-            </div>
-              
-              
-            </div>
-          </div>
+          
+        </div>
+      </div>
       
 
     </div>
@@ -62,14 +60,14 @@
   </div> -->
   <div class="row  card-group">
       <div class="col-md-3" *ngFor="let b of books" >
-            <div class="card mt-2  mb-3 text-center card h-80" style="width: 100%; height: 450px;">
+            <div class="card mt-2  mb-3 text-center card h-80" style="width: 90%; height: 500px;">
               
-              <div class="card-body ">
+              <div class="card-body text-center">
             <mat-card-header>
               <mat-card-title>{{b.title}}</mat-card-title>
             </mat-card-header>
-            <div class="mid text-center">
-              <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="220px"  alt="Card image cap">
+            <div class="mid">
+              <img class="card-img mt-2 " src="http://localhost:9092/download/?image={{b.logo}}" width="180px" height="250px"  alt="Card image cap">
                  <b><h5 class="card-subtitle mb-2 text-muted"> By {{b.authorName}}</h5></b> 
             </div>
             
@@ -81,13 +79,14 @@
               </div>
               <div class="btns text-center">
                 <button type="button" (click)="addToCart(b)" class="btn btn-block mb-2">Add to Cart</button>
-                <!-- <button type="button" class="btn btn-block mb-2" data-bs-toggle="modal" data-bs-target="#exampleModal">Details</button> -->
+               
               </div>
                 
                 
               </div>
             </div>
-        
+         
+      
   
       </div>
   </div>
