--- a/src/app/Components/login/login.component.html
+++ b/src/app/Components/login/login.component.html
@@ -118,10 +118,15 @@
     
                       
     
-                      <div class="d-flex justify-content-center  mx-4 mb-3 mb-lg-4">
-                        <button type="button" routerLink="/author-dashboard" (click)="login()" class="btn btn-primary btn-block">Login</button>
-                        <button type="button" routerLink="/signup" class="btn btn-primary btn-block">Signup</button>
+                      <div class="pt-1 mb-4">
+                        <button class="btn btn-primary btn-lg btn-block" (click)="login()" type="button">Login</button>
                       </div>
+
+                      
+                      <p class="mb-5 pb-lg-2" style="color: #393f81;">Don't have an account? <a href="signup"
+                          style="color: #393f81;">Register here</a></p>
+                      <a href="#!" class="small text-muted">Terms of use.</a>
+                      <a href="#!" class="small text-muted">Privacy policy</a>
     
                   
     
