--- a/src/app/Components/purchasedbooks/purchasedbooks.component.html
+++ b/src/app/Components/purchasedbooks/purchasedbooks.component.html
@@ -51,7 +51,7 @@
     <div class="modal-dialog">
       <div class="modal-content">
         <div class="modal-header">
-          <h3 class="modal-title" id="exampleModalLabel">Student Details</h3>
+          <h3 class="modal-title" id="exampleModalLabel">Book Details</h3>
           <button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
         </div>
         <div class="modal-body">
