--- a/src/app/Components/signup/signup.component.html
+++ b/src/app/Components/signup/signup.component.html
@@ -92,8 +92,8 @@
       
                         
       
-                        <div class="d-flex justify-content-center mx-4 mb-3 mb-lg-4">
-                          <button type="button" (click)="saveAu()" class="btn btn-primary btn-block">Submit</button>
+                        <div class="pt-1 mb-4">
+                          <button class="btn btn-primary btn-lg btn-block" (click)="saveAu()" type="button">Submit</button>
                         </div>
       
                       </form>
